--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 layout: default
 title: Dachaigh
 ---
-{% for post in paginator.posts %}
+{% for post in paginator.posts reversed %}
   <div class="container">
     <div class="row">
       <div class="col-3">
