--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Dachaigh
 ---
 
 {% for post in paginator.posts reversed %}
-{% unless post.categories contains "roimhe" %}
+{% unless post.categories contains "blog" %}
   <div class="container">
     <div class="row">
       <div class="col-3">
