--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@ title: Dachaigh
         <p><strong>{{ post.seoladh }}</strong></p>
         <p>Airson barrachd fhiosrachaidh mun tachartas seo tadhalaibh air:</p>
           {% if post.larach-lin %}
-            <a href="{{post.larach-lin}}" target="_blank" rel="noopener"><button type="button" class="btn btn-primary more-info" style="background-color: #fb135b !important; border-style: none; width: 30%;"><i class="fas fa-home"></i></button></a>
+            <a href="{{post.larach-lin}}" target="_blank" rel="noopener"><button type="button" class="btn btn-primary more-info" style="background-color: #007bff !important; border-style: none; width: 30%;"><i class="fas fa-home"></i></button></a>
 
           {% endif %}
           {% if post.twitter %}
-            <a href="{{post.twitter}}" target="_blank" rel="noopener"><button type="button" class="btn btn-primary" style="background-color: #fb135b !important; border-style: none; width: 30%;"><i class="fab fa-twitter"></i></button></a>
+            <a href="{{post.twitter}}" target="_blank" rel="noopener"><button type="button" class="btn btn-primary" style="background-color: #007bff !important; border-style: none; width: 30%;"><i class="fab fa-twitter"></i></button></a>
 
           {% endif %}
           {% if post.facebook %}
-            <a href="{{post.facebook}}" target="_blank" rel="noopener"><button type="button" class="btn btn-primary" style="background-color: #fb135b !important; border-style: none; width: 30%;"><i class="fab fa-facebook-f"></i></button></a>
+            <a href="{{post.facebook}}" target="_blank" rel="noopener"><button type="button" class="btn btn-primary" style="background-color: #007bff !important; border-style: none; width: 30%;"><i class="fab fa-facebook-f"></i></button></a>
           {% endif %}
       </div>
     </div>
